--- a/index.html
+++ b/index.html
@@ -3,12 +3,39 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
     <title>megamenu</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    megamenu
+    <div class="topr"><h1>hi.</h1></div>
+    <div class="nav-area">
+      <ul class="navr">
+        <li class="navitem">
+          <a href="/" class="navitem-a"><span>Home</span></a>
+        </li>
+        <li class="navitem">
+          <a href="/" class="navitem-a"><span>Report Library</span></a>
+          <div class="navitem-megamenu">
+            <div class="navitem-megamenu-container">
+              <div class="megamenu-categories"></div>
+              <div class="megamenu-items">
+                <div class="megamenu-columns"></div>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li class="navitem">
+          <a href="/" class="navitem-a"><span>nav-item</span></a>
+        </li>
+        <li class="navitem">
+          <a href="/" class="navitem-a"><span>nav-item</span></a>
+        </li>
+        <li class="navitem">
+          <a href="/" class="navitem-a"><span>nav-item</span></a>
+        </li>
+      </ul>
+    </div>
 
     <script src="js.js"></script>
   </body>
