--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <li class="navitem">
           <a href="/" class="navitem-a"><span>Home</span></a>
         </li>
-        <li class="navitem">
+        <li class="navitem report-library">
           <a href="/" class="navitem-a"><span>Report Library</span></a>
           <div class="navitem-megamenu">
             <div class="navitem-megamenu-container">
