--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div class="nav-area">
       <ul class="navr">
         <li class="navitem">
-          <a href="/" class="navitem-a"><span>Home</span></a>
+          <a href="#www" class="navitem-a"><span>Home</span></a>
         </li>
         <li class="navitem report-library">
-          <a href="/" class="navitem-a"><span>Report Library</span></a>
+          <a href="#www" class="navitem-a"><span>Report Library</span></a>
           <div class="navitem-megamenu">
             <div class="navitem-megamenu-container">
               <div class="megamenu-categories"></div>
@@ -26,13 +26,13 @@
           </div>
         </li>
         <li class="navitem">
-          <a href="/" class="navitem-a"><span>nav-item</span></a>
+          <a href="#www" class="navitem-a"><span>nav-item</span></a>
         </li>
         <li class="navitem">
-          <a href="/" class="navitem-a"><span>nav-item</span></a>
+          <a href="#www" class="navitem-a"><span>nav-item</span></a>
         </li>
         <li class="navitem">
-          <a href="/" class="navitem-a"><span>nav-item</span></a>
+          <a href="#www" class="navitem-a"><span>nav-item</span></a>
         </li>
       </ul>
     </div>
