--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <a href="#www" class="navitem-a"><span>Home</span></a>
         </li>
         <li class="navitem report-library">
-          <a href="#www" class="navitem-a"><span>Report Library</span></a>
+          <a href="./page" class="navitem-a"><span>Report Library</span></a>
           <div class="navitem-megamenu">
             <div class="navitem-megamenu-container">
               <div class="megamenu-categories"></div>
