--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="topr"><h1>hi.</h1></div>
-    <div class="nav-area">
-      <ul class="navr">
-        <li class="navitem">
-          <a href="#www" class="navitem-a"><span>Home</span></a>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <div class="navbar-inverse" id="navbar">
+      <ul>
+        <li class="">
+          <a href="#www" class=""><span>Home</span></a>
         </li>
-        <li class="navitem report-library">
-          <a href="./page" class="navitem-a"><span>Report Library</span></a>
+        <li class="report-library">
+          <a href="./page" class=""><span>Report Library</span></a>
           <div class="navitem-megamenu">
             <div class="navitem-megamenu-container">
               <div class="megamenu-categories"></div>
@@ -25,14 +30,14 @@
             </div>
           </div>
         </li>
-        <li class="navitem">
-          <a href="#www" class="navitem-a"><span>nav-item</span></a>
+        <li class="">
+          <a href="#www" class=""><span>nav-item</span></a>
         </li>
-        <li class="navitem">
-          <a href="#www" class="navitem-a"><span>nav-item</span></a>
+        <li class="">
+          <a href="#www" class=""><span>nav-item</span></a>
         </li>
-        <li class="navitem">
-          <a href="#www" class="navitem-a"><span>nav-item</span></a>
+        <li class="">
+          <a href="#www" class=""><span>nav-item</span></a>
         </li>
       </ul>
     </div>
