--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
     <title>megamenu</title>
     <link rel="stylesheet" href="style.css" />
+    <!--[if lte IE 9]>
+      <link rel="stylesheet" type="text/css" href="ie9-and-down.css" />
+    <![endif]-->
   </head>
   <body>
     <br />
